--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "uikit": "^3.0.0-beta.42"
+    },
+    "dependencies": {
+        "hls.js": "^0.10.1",
+        "jquery": "^3.3.1",
+        "vue": "^2.5.17",
+        "vue-aplayer": "^1.6.1",
+        "vue-axios": "^2.1.2",
+        "vue-router": "^3.0.1",
+        "vue-template-compiler": "^2.5.17"
     }
 }
